@@ -28,7 +28,9 @@ PHP                                                                        NEWS
 
 - Reflection:
   . Implemented request #38992 (invoke() and invokeArgs() static method calls
-    should match). (cmb)
+    should match). (cmb).
+  . Add ReflectionNamedType::getName() and return leading "?" for nullable types
+    from ReflectionType::__toString(). (Trowski)
 
 - SQLite3:
   . Updated to SQLite3 3.14.0. (cmb)
